fixed the menu overflow issue

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,12 +2,11 @@ body {
   margin: 0 auto;
   font-family: sans-serif;
   overflow-x: hidden;
-  width: 100vw;
 }
 
 main {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   overflow-x: hidden;
 }
 
@@ -97,11 +96,11 @@ nav {
     justify-content: center;
     text-align: center;
     position: absolute;
-    left: 50%;
-    transform: translate(-50%);
     background-color: #111;
     z-index: 0;
     top: -500%;
+    margin: 0;
+    padding: 0;
   }
 
   .show {
